force-app/main/default/objects/CAS_Page_Detail__c/CAS_Page_Detail__c.object-meta.xml
<CustomObject>
    <label>Page Detail</label>
    <nameField>
        <label>CAS Page Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>