force-app/main/default/objects/CAS_Page_Detail__c/fields/Field_Detail__c.field-meta.xml
<CustomField>
    <fullName>Field_Detail__c</fullName>
    <label>Field Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>