force-app/main/default/objects/CAS_Page_Detail__c/fields/Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field__c</fullName>
    <label>Lookup Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>