force-app/main/default/objects/CAS_Page_Detail__c/fields/Lookup_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Limit__c</fullName>
    <label>Lookup Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>