force-app/main/default/objects/CAS_Page_Detail__c/fields/Page_Template__c.field-meta.xml
<CustomField>
    <fullName>Page_Template__c</fullName>
    <label>Page Template</label>
    <referenceTo>CAS_Page_Template__c</referenceTo>
    <relationshipName>CAS_Page_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>